--- a/index.html
+++ b/index.html
@@ -143,19 +143,11 @@
 
   <p>
     <ul>
-      <li> +sinfo: info about the server </li>
+      <li> +help: info about the server </li>
   </p>
   
-<section class="main-section" id="About_Me">
-<header>About Me</header>  
-<main>
-<br>
-<p>
-  support my work on <a href="https://www.patreon.com/yanthedev">patreon</a> for exclusive benefits
-</p>
 
-</main>
- 
+
   
 
 </html>
