--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
               <li> +simp: ayo bro you feel ok? you just donated 50$ to Pokimane </li>
               <li> +hr @user : play russian roullete with your comrades 
               <br>
-              +yes to accept the duel | +pan to shoot.You may get kicked.Think twice before playing  
+              +yes to accept the duel | +pan to shoot.You may get kicked.Think twice before playing 
+           
               </li>
+              <li>+kiss @user @user2: kiss a person</li>
+              <li>+cuddle @user @user1: cuddle a person</li>
+              
+              <li>NOTE: you can use +gay @user if you do not want to check yourself</li>
             </ul>
     </ul>
   </p>
@@ -111,6 +116,7 @@
               <li id="blur_hentai_nsfw"> +tentacle: hentai girl fucked by a tentacle</li>
               <li id="blur_hentai_nsfw"> +boobs: 2D boobs</li>
               <li id="blur_hentai_nsfw"> +azur: azur lane hentai</li>
+              <li>+sex @user @user2: sex beetwen 2 people</li>
             </ul>
     </ul>
   </p>
@@ -125,10 +131,10 @@
   
   <p>
     <ul>
-      <li>+kick: kicks a member | +kick @user </li>
+      <li>+kick: kicks a member | +kick @user _reason_ </li>
       <li>+purge _number_: purge a specific number of messages </li>
             <ul>
-              <li> +ban @user: bans a user </li>
+              <li> +ban @user _reason_: bans a user </li>
             </ul>
     </ul>
   </p>
