--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <li> <a class= "nav-link" href="#Japan"> fun </a> </li>
     <li> <a class="nav-link" href="#Thailand"> owner </a> </li>
     <li> <a class="nav-link" href="#Indonesia"> NSFW </a> </li>
-    <li> <a class="nav-link" href="#Taiwan"> Taiwan </a> </li>
+    <li> <a class="nav-link" href="#Taiwan"> Mod </a> </li>
     <li> <a class="nav-link" href="#Singapore"> utility </a> </li>
     <li> <a class="nav-link" href="#About_Me"> Support Me </a> </li>
   </ul>
