--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
               <li> +pp: how big is it </li>
               <li> +gay: no pride month </li>
               <li> +simp: ayo bro you feel ok? you just donated 50$ to Pokimane </li>
+              <li>+insult: get insulted in the worst way possible</li>
               <li> +hr @user : play russian roullete with your comrades 
               <br>
               +yes to accept the duel | +pan to shoot.You may get kicked.Think twice before playing 
@@ -74,6 +75,7 @@
               </li>
               <li>+kiss @user @user2: kiss a person</li>
               <li>+cuddle @user @user1: cuddle a person</li>
+              <li>+search args: search something on the internet</li>
               
               <li>NOTE: you can use +gay @user if you do not want to check yourself</li>
             </ul>
@@ -135,6 +137,7 @@
       <li>+purge _number_: purge a specific number of messages </li>
             <ul>
               <li> +ban @user _reason_: bans a user </li>
+              <li>+unban @user: unbans a member from the guild</li>
             </ul>
     </ul>
   </p>
