--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
 
   <p>
     <ul>
-      <li> +help: info about the server </li>
+      <li> +help: get full list of commands </li>
+      <li> +serverinfo: info about the server</li>
+      <li>+whois @user: info about a specific user</li>
   </p>
   
 
